Fix alignment; See: websharks/comment-mail#187

--- a/comment-mail/client-s/css/menu-pages.css
+++ b/comment-mail/client-s/css/menu-pages.css
@@ -768,13 +768,13 @@ Menu page heading styles.
 {
 	float: right;
   clear: right;
-  max-width: 350px;
+  max-width: 300px;
   margin: 1em 0 0 0;
-  text-align: center;
+  text-align: right;
 }
 .comment-mail-menu-page .pmp-heading .pmp-heading-options a
 {
-	line-height: 1.5em;
+	line-height: 1.75em;
   text-decoration: none;
   margin: 0 .5em 0 .5em;
   display: inline-block;
@@ -783,9 +783,9 @@ Menu page heading styles.
 {
 	float: right;
   clear: right;
-  min-width: 350px;
-  margin: 0.5em 0 0 0;
-  text-align: center;
+  min-width: 300px;
+  margin: 0.5em 0.5em 0 0;
+  text-align: right;
 }
 .comment-mail-menu-page .pmp-heading .plugin-menu-page-restore-defaults
 {
